--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "wavesurfer.js": "^7.8.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
