--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cesdk/cesdk-js": "1.38.0",
+    "@cesdk/engine": "1.38.0",
+    "@google/model-viewer": "3.1.1",
+    "@imgly/idml-importer": "^1.0.6",
+    "@imgly/psd-importer": "^0.0.3",
+    "@imgly/plugin-background-removal-web": "^1.0.0",
+    "@imgly/plugin-cutout-library-web": "^1.0.5",
+    "@imgly/plugin-qr-code-web": "^0.1.0",
+    "@imgly/plugin-vectorizer-web": "^1.0.0",
+    "airtable": "^0.12.1",
+    "chroma-js": "^2.4.2",
+    "classnames": "^2.3.2",
+    "lodash": "^4.17.21", 
     "@auth/prisma-adapter": "^2.6.0",
     "@google-cloud/storage": "^7.13.0",
     "@hookform/resolvers": "^3.9.0",
@@ -53,7 +66,14 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "wavesurfer.js": "^7.8.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-colorful": "^5.6.1",
+    "react-draggable": "^4.4.5",
+    "react-masonry-css": "^1.0.16",
+    "react-slider": "^2.0.6",
+    "react-tiny-popover": "^7.2.4",
+    "three": "^0.154.0",
+    "unsplash-js": "^7.0.18"
   },
   "devDependencies": {
     "@types/node": "^20",
